--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>VladkyAngular2Test2</title>
-  <base href="--prod">
+    <meta charset="utf-8">
+    <title>VladkyAngular2Test2</title>
+    <base href="./">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="./bootstrap.min.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link href="https://bootswatch.com/paper/bootstrap.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="styles.cb47c223ee6fc5e727a7.bundle.css" rel="stylesheet" />
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+    <app-root>Loading...</app-root>
+    <script type="text/javascript" src="inline.f5c380ce9b90f82710e9.bundle.js">
+
+    </script>
+    <script type="text/javascript" src="polyfills.fcce1763d01eb56bc68f.bundle.js">
+
+    </script>
+    <script type="text/javascript" src="scripts.141672780449a5f06f27.bundle.js">
+
+    </script>
+    <script type="text/javascript" src="vendor.a8379d0db5e839f6ec08.bundle.js">
+
+    </script>
+    <script type="text/javascript" src="main.d7b064a2372a4c818f0d.bundle.js">
+
+    </script>
+</body>
 
 </html>
